# resmtp

./: .gitignore  CMakeLists.txt  README  TODO  adkim.cpp  aspf_impl.h  buffers.h  check.h  config.h  coroutine.hpp  envelope.cpp  envelope.h  greylisting.conf  header_parser.cpp  header_parser.h  log.cpp  log.h  main.cpp  options.cpp  options.h  rbl.cpp  rbl.h  resmtp-dbg.conf  resmtp-new.conf  server.cpp  smtp_client.cpp  smtp_client.h  smtp_connection.cpp  smtp_connection.h  smtp_connection_manager.h  so_client.cpp  socket_pool_service_impl.h  switchcfg.h  uti.cpp  uti.h
cmake/: ParseDebVersion.cmake
conf-examples/: resmtp-dbg.conf
debian/: changelog  control  resmtp.init  resmtp.init.d  resmtp.install  resmtp.upstart  rules
etc/: Makefile  c.conf  resmtp-1.conf  resmtp.conf
etc/logrotate.d/: resmtp
etc/resmtp/: resmtp.conf
graphite/: resmtp_graphite.py  test.py
net/: basic_dns_resolver.hpp  dns.hpp  network_array.hpp  rfc1035_414.hpp
net/impl/: dns_resolver_impl.hpp
rc_clients/: basic_rc_client.cpp  basic_rc_client.h  greylisting.cpp
resmtp-graph/debian/: .gitignore  changelog  control  install  resmtp-graph.init  rules
resmtp-graph/src/: resmtp-graph
src/: adkim.cpp  adkim.h  aspf_impl.h  auth.cpp  buffer_iterator.h  buffers.h  check.h  envelope.cpp  envelope.h  eom_parser.cpp  eom_parser.h  global.cpp  global.h  header_parser.cpp  header_parser.h  ip_options.cpp  ip_options.h  log.cpp  log.h  log_spamhaus.cpp  log_spamhaus.h  main.cpp  monitor.cpp  monitor.h  options.cpp  options.h  pidfile.cpp  pidfile.h  rbl.cpp  rbl.h  rfc822date.c  rfc_date.cpp  rfc_date.h  server.cpp  server.h  smtp_backend_manager.cpp  smtp_backend_manager.h  smtp_client.cpp  smtp_client.h  smtp_connection.cpp  (+8 more)
src/asio/asio/ssl/detail/impl/: engine.ipp
src/coroutine/: coroutine.hpp  yield.hpp
src/net/: basic_dns_resolver.hpp  basic_dns_resolver_service.hpp  dns.hpp  dns_resolver.hpp  network_array.hpp  rfc1035_414.hpp
src/net/impl/: dns_resolver_impl.hpp
test/: .gitignore  CMakeLists.txt  dns1.cpp  test_wrr.cpp
test_new_net/: .gitignore  dns_simple.build  dns_simple.cpp  dns_util.cpp  test_resolver.build  test_resolver.cc
test_new_net/boost/net/: basic_dns_resolver.hpp  basic_dns_resolver_service.hpp  dns.hpp  dns_cache.hpp  dns_debug.hpp  network_array.hpp  resolve.hpp  rfc1035_414.hpp
test_new_net/boost/net/impl/: dns_resolver_impl.hpp
test_py/: rspamd_stat.py  test.py
testmail/: 1.eml  2.eml  burst.sh  e-file.sh  e-range-multi.sh  e-range-multi2.sh  e-range.sh  e-size.sh  e-sizebomb.sh  g.cpp  mail1.txt  mailx.sh  sendmail.sh  test.sh  testmail.sh  testmassmail.sh  tmailx.sh  tsendmail.sh
testssl/: resmtp-testssl.sh
